Add Nautile reference and fix typo

--- a/README
+++ b/README
@@ -1,2 +1,4 @@
-Prefix-list of BGP Announce inside New Caledonia
+Prefix-list of BGP Announces inside New Caledonia
 Origin-Site: https://git.nautile.net/gitweb/bgpnc.git
+
+Nautile (AS45345)
